--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-image: url('./images/sw-bg.jpg');
-  background-size: cover;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	background-image: url('https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80');
+	background-size: cover;
 }
