tweaked the styling of the components

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,13 @@
 	justify-content: space-between;
 	align-items: center;
 }
+.characterDetail {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.detailsHeader {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
